# pico-w-webserver-template

./: CMakeLists.txt  cgi.h  htmldata.c  main.c  ssi.h
html_files/: index.shtml
